# oatmeal

./: .dprint.json  .gitignore  .goreleaser.yml  .mise.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  assets.toml  build.rs  cliff.toml  committed.toml  config.example.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.cargo-husky/hooks/: commit-msg
.devcontainer/: Dockerfile  build.sh  devcontainer-src.json  devcontainer.json  docker-compose.yml  release.sh  start.sh  zcc.sh
.github/workflows/: ci.yml  devcontainer.yml  devpod.yml  release.yml
src/: config.rs  main.rs
src/application/: cli.rs  mod.rs  ui.rs
src/configuration/: config.rs  config_test.rs
src/domain/models/: action.rs  author.rs  backend.rs  backend_test.rs  bubble.rs  bubble_test.rs  editor.rs  editor_test.rs  event.rs  loading.rs  message.rs  message_test.rs  mod.rs  session.rs  slash_commands.rs  slash_commands_test.rs  textarea.rs
src/domain/services/: actions.rs  app_state.rs  app_state_test.rs  auth_services.rs  auth_services_test.rs  bubble.rs  bubble_list.rs  bubble_list_test.rs  bubble_test.rs  clipboard.rs  code_blocks.rs  code_blocks_test.rs  edit_prompt.rs  edit_prompt_test.rs  events.rs  mod.rs  scroll.rs  sessions.rs  syntaxes.rs  themes.rs
src/infrastructure/: mod.rs
src/infrastructure/backends/: claude.rs  claude_test.rs  gemini.rs  gemini_test.rs  githubcopilot.rs  githubcopilot_test.rs  langchain.rs  langchain_test.rs  mod.rs  ollama.rs  ollama_test.rs  openai.rs  openai_test.rs
src/infrastructure/backends/githubcopilot/: githubcopilot_auth.rs
src/infrastructure/editors/: clipboard.rs  mod.rs  neovim.rs  noop.rs  noop_test.rs
test/: bad-config.toml  githubcopilot-host.json
test/snapshots/: oatmeal__configuration__config__tests__it_serializes_to_valid_toml.snap  oatmeal__domain__models__bubble__tests__it_creates_author_model_text_code_multiple_blocks.snap  oatmeal__domain__models__bubble__tests__it_creates_author_user_text.snap  oatmeal__domain__services__app_state__tests__handle_slash_commands__it_copies_code_block.snap  oatmeal__domain__services__app_state__tests__handle_slash_commands__it_replaces_code_block.snap  oatmeal__domain__services__bubble__tests__it_creates_author_model_text_code_multiple_blocks.snap  oatmeal__domain__services__bubble__tests__it_creates_author_user_text.snap  oatmeal__infrastructure__backends__claude__tests__it_gets_completions.snap  oatmeal__infrastructure__backends__gemini__tests__it_gets_completions.snap  oatmeal__infrastructure__backends__githubcopilot__tests__it_gets_completions.snap  oatmeal__infrastructure__backends__githubcopilot__tests__it_gets_completions_no_token.snap  oatmeal__infrastructure__backends__githubcopilot__tests__it_gets_completions_token_expired.snap  oatmeal__infrastructure__backends__openai__tests__it_gets_completions.snap
test/utils/: Cargo.toml
test/utils/src/: lib.rs
tools/: apk.sh  apt.sh  choco.sh  goreleaser-dist.sh  goreleaser.go  nur.sh  release-env.sh  release.sh  yum.sh
tools/node/: .prettierignore  .prettierrc  package-lock.json  package.json
tools/xtask/: Cargo.toml
tools/xtask/src/: hash_assets.rs  main.rs  readme.rs
